# pytorch-image-translation-models

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  environment.yaml  pyproject.toml  requirements.txt
.github/: publish.yml
.github/workflows/: publish.yml
configs/: ecsi_e2h64.json
docs/: checkpoint-layouts.md  credits.md  datasets.md  examples.md  features.md  package-structure.md  storage-buckets.md
examples/: __init__.py
examples/baselines/: README.md  __init__.py
examples/baselines/diffuseit/: __init__.py  pipeline.py
examples/bbdm/: __init__.py  config.py  train_bbdm.py
examples/bdbm/: __init__.py  config.py  train_bdbm.py
examples/bibbdm/: __init__.py  config.py  train_bibbdm.py
examples/cdtsde/: __init__.py  config.py  train_cdtsde.py
examples/community/: README.md  __init__.py  e3diff.py  parallel_gan.py
examples/community/alignflow/: README.md  __init__.py  config.py  pipeline.py  train.py
examples/community/bbdm/: README.md  __init__.py  convert_ckpt_to_unet.py  convert_ckpt_to_vqmodel.py  model.py  pipeline.py
examples/cut/: __init__.py  config.py  train_cut.py
examples/cyclediff/: README.md  __init__.py  config.py  train.py
examples/cyclegan/: __init__.py  config.py  train_cyclegan.py
examples/cyclegan_turbo/: __init__.py  config.py  train_cyclegan_turbo.py
examples/dbim/: __init__.py  config.py  train_dbim.py
examples/ddbm/: __init__.py  config.py  train_ddbm.py
examples/ddib/: __init__.py  config.py  train_ddib.py
examples/decent/: __init__.py  config.py  train_decent.py
examples/diffusionrouter/: __init__.py  train.py
examples/flsesim/: config.py  train_flsesim.py
examples/hneg_src/: __init__.py  config.py  train_hneg_src.py
examples/i2sb/: __init__.py  __main__.py  config.py  trainer.py
examples/inference/: __init__.py  run_inference.py
examples/lbm/: __init__.py  config.py  train_lbm.py
examples/lddbm/: __init__.py  config.py  convert_pt_to_lddbm.py  train_lddbm.py
examples/local_diffusion/: __init__.py  config.py  train_local_diffusion.py
examples/negcut/: __init__.py  config.py  train_negcut.py
examples/pipelines/: README.md  __init__.py  run_inference.py
examples/pix2pix/: __init__.py  train_pix2pix.py
examples/pix2pix_turbo/: __init__.py  config.py  train_pix2pix_turbo.py
examples/pix2pixhd/: __init__.py  config.py  train_pix2pixhd.py
examples/stargan/: __init__.py  train_stargan.py
examples/stegogan/: __init__.py  train_stegogan.py
examples/unsb/: __init__.py  config.py  train_unsb.py
src/: __init__.py
src/data/: __init__.py  datasets.py  transforms.py
src/inference/: __init__.py  predictor.py
src/losses/: __init__.py  adversarial.py  diffusion.py  perceptual.py
src/metrics/: README.md  __init__.py  image_quality.py
src/models/: __init__.py  dense_normalization.py  discriminators.py  generators.py  pix2pixhd.py
src/models/dit/: jit.py  (+2 more)
src/pipelines/: __init__.py  bbdm.py  bdbm.py  bibbdm.py  cdtsde.py  cut.py  cyclediff.py  cyclegan.py  cyclegan_turbo.py  dbim.py  ddbm.py  ddib.py  diffusionrouter.py  ecsi.py  fcdm.py  i2sb.py  lbm.py  lddbm.py  local_diffusion.py  pix2pix.py  pix2pix_turbo.py  pix2pixhd.py  stargan.py  stegogan.py  unsb.py
src/schedulers/: __init__.py  bbdm.py  bdbm.py  bibbdm.py  cdtsde.py  dbim.py  ddbm.py  ddib.py  fcdm.py  i2sb.py  lbm.py  local_diffusion.py  sid2.py  unsb.py
src/training/: __init__.py  argparse_utils.py  checkpoint.py  common.py  optimizer_utils.py  stargan_trainer.py  stegogan_trainer.py  trainer.py
src/utils/: __init__.py  config_yaml.py  training_utils.py
tests/: test_community_pipelines.py  test_cyclediff.py  test_data.py  test_dit_lbm.py  test_i2sb_baseline.py  test_inference.py  test_local_diffusion.py  test_losses.py  test_metrics.py  test_metrics_lpips_dists.py  test_metrics_unpaired.py  test_models.py  test_new_schedulers_pipelines.py  test_pipeline_examples.py  test_stargan.py  test_stegogan.py  test_unsb.py
(+327 files in other folders)
