[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytorch-image-translation-models"
description = "PyTorch image translation models"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Bili-Sakura" }]
requires-python = ">=3.10"
dynamic = ["version", "dependencies"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Repository = "https://github.com/Bili-Sakura/pytorch-image-translation-models"
Issues = "https://github.com/Bili-Sakura/pytorch-image-translation-models/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src"]

[tool.setuptools.dynamic]
version = { attr = "src.__version__" }
dependencies = { file = ["requirements.txt"] }
